updated page files

--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
-<!-- DELETE THIS BEFORE YOU SUBMIT. KEEPING HERE FOR YOU TO COPY/PASTE FROM -->
+<!-- Stephanie's portfolio assignment HTML. Index page -->
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- Head -->
 <head>
   <meta charset="UTF-8">
   <title>Index page for portfolio website</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
+<!-- Body -->
 <body>
   <header>
     <section id="headersection">
-            <aside id="aside1">Stephanie Long</aside>
-            </aside>
-            <aside id="aside2">About     Portfolio     Contact</aside>
-          </section>
-        
+        <div id="aside1">Stephanie Long</div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
   </header>
+  <hr>
     <section id="full">
-          <aside id="aside3">
+          <div id="aside3">
                 <h1>About Me</h1>
                 <hr>
-                <img src="https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/v1446132931/bccnrl2k19kirkju106n.png">
-                <p>Stephanie is an entrepreneur and experienced marketing executive with a subject matter expertise in biddable media, ad operations and big data computing platforms. Stephanie's career began a decade ago in eCommerce. A highly technical thinker, Stephanie took special interest early on in the dynamics of digital systems. It was during her time at two of the world's largest advertising agencies that Stephanie became a subject matter expert in programmatic software and ad optimization. Stephanie went on to lead digital media strategy for several Fortune 500 companies. 
+                <img src="./assets/images/headshot.jpg">
+                <p>
+                Stephanie is an entrepreneur and experienced marketing executive with a subject matter expertise in biddable media, ad operations and big data computing platforms. Stephanie's career began a decade ago in eCommerce. A highly technical thinker, Stephanie took special interest early on in the dynamics of digital systems. It was during her time at two of the world's largest advertising agencies that Stephanie became a subject matter expert in programmatic software and ad optimization. Stephanie went on to lead digital media strategy for several Fortune 500 companies. 
                 <br>
                 <br>
                 In August 2017, Stephanie co-founded a company called New Breed Athlete with her husband Kyle Long. New Breed Athlete is a fitness lifestyle brand and subscription training service. Stephanie is also an aspiring singer and in Q4 2018 will be launching a YouTube channel and social media presence under the alter-ego "Pasa". 
                 </p>
-          </aside>
-        </section>
-
-  <footer>
-    &lt;footer&gt; #ccc
-  </footer>
-
+            </div>
+    </section>
+    <hr>
 </body>
-
+<!-- Footer -->
+  <footer>Copyright ©</footer>
+<!-- Fin -->
 </html>
