--- a/index.html
+++ b/index.html
@@ -1,45 +1,120 @@
-<!-- Stephanie's portfolio assignment HTML. Index page -->
+<!-- Stephanie's Bootstrap portfolio -->
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- Head -->
+
 <head>
-  <meta charset="UTF-8">
-  <title>Index page for portfolio website</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="UTF-8">
+    <title>Bootstrap Portfolio</title>
+    <script src="https://use.fontawesome.com/2214a7171f.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
-<!-- Body -->
+
 <body>
-  <header>
-    <section id="headersection">
-        <div id="aside1">Stephanie Long</div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+    <!-- Navagation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container p-0">
+            <a class="navbar-brand" href="index.html">Stephanie Long</a>
+            <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav"
+                data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
-            </nav>
-        </div>
-    </section>
-  </header>
-  <hr>
-    <section id="full">
-          <div id="aside3">
-                <h1>About Me</h1>
-                <hr>
-                <img src="./assets/images/headshot.jpg">
-                <p>
-                Stephanie is an entrepreneur and experienced marketing executive with a subject matter expertise in biddable media, ad operations and big data computing platforms. Stephanie's career began a decade ago in eCommerce. A highly technical thinker, Stephanie took special interest early on in the dynamics of digital systems. It was during her time at two of the world's largest advertising agencies that Stephanie became a subject matter expert in programmatic software and ad optimization. Stephanie went on to lead digital media strategy for several Fortune 500 companies. 
-                <br>
-                <br>
-                In August 2017, Stephanie co-founded a company called New Breed Athlete with her husband Kyle Long. New Breed Athlete is a fitness lifestyle brand and subscription training service. Stephanie is also an aspiring singer and in Q4 2018 will be launching a YouTube channel and social media presence under the alter-ego "Pasa". 
-                </p>
+                <!-- navbar-nav -->
             </div>
-    </section>
-    <hr>
+            <!-- collapse -->
+        </div>
+        <!-- container -->
+    </nav>
+    <!-- navbar -->
+    <!-- Body -->
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="card col-lg-8 mt-4">
+                <div class="card-body">
+                    <h4 class="card-title">About Me</h4>
+                    <hr>
+                    <img alt="Profile Picture" class="float-left col-sm-6" src="https://static.wixstatic.com/media/323cea_42ab56e5e7f44e0e88ff86338449bb5b~mv2.jpg/v1/fill/w_300,h_300,al_c,q_80,usm_0.66_1.00_0.01/323cea_42ab56e5e7f44e0e88ff86338449bb5b~mv2.webp"> Stephanie is an entrepreneur and experienced marketing executive with a subject matter expertise in
+                    biddable media, ad operations and big data computing platforms. Stephanie's career began a decade ago
+                    in eCommerce. A highly technical thinker, Stephanie took special interest early on in the dynamics of
+                    digital systems. It was during her time at two of the world's largest advertising agencies that Stephanie
+                    became a subject matter expert in programmatic software and ad optimization. Stephanie went on to lead
+                    digital media strategy for several Fortune 500 companies. In August 2017, Stephanie co-founded a company
+                    called New Breed Athlete with her husband Kyle Long. New Breed Athlete is a fitness lifestyle brand and
+                    subscription training service. Stephanie is also an aspiring singer and in Q4 2018 will be launching
+                    a YouTube channel and social media presence under the alter-ego "Pasa".
+                </div>
+                <!-- card-body -->
+            </div>
+            <!-- card col-lg-8 -->
+            <div class="col-lg-3 p-0 mt-4">
+                <!-- card height fix -->
+                <div class="card p-0">
+                    <div class="card-header">
+                        Connect with me
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4 p-1">
+                                <a class="fa-stack fa-2x mx-auto d-block" href="https://github.com/smlong203" target="_blank">
+                                    <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </div>
+                            <div class="col-4 p-1">
+                                <a class="fa-stack fa-2x mx-auto d-block" href="https://www.linkedin.com/in/stephanielong203/" target="_blank">
+                                    <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                                    <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </div>
+                            <div class="col-4 p-1">
+                                <a class="fa-stack fa-2x mx-auto d-block" href="https://stackexchange.com/users/14010469/stephanie-m-long" target="_blank">
+                                    <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- /row -->
+                    </div>
+                    <!-- card-body -->
+                </div>
+                <!-- card -->
+            </div>
+            <!-- col-lg-3 -->
+        </div>
+        <!-- /row justify-content-between -->
+    </div>
+    <!-- container -->
+    <!-- Footer -->
+    <footer class="footer">
+        <br>
+        <div class="container">
+            <span class="text-muted">&copy;Copyright 2018 Stephanie Long</span>
+        </div>
+    </footer>
+    <br>
+    <!-- Javascript -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+    </script>
 </body>
-<!-- Footer -->
-  <footer>Copyright ©</footer>
-<!-- Fin -->
+
 </html>
