--- a/portfolio.html
+++ b/portfolio.html
@@ -1,64 +1,142 @@
-<!-- Stephanie's portfolio assignment HTML. Portfolio page -->
+<!-- Stephanie's Bootstrap portfolio -->
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- Head -->
-<head>
-  <meta charset="UTF-8">
-  <title>Index page for portfolio website</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<!-- Body -->
-<body>
-        <header>
-          <section id="headersection">
-              <div id="aside1">Stephanie Long</div>
-                  <nav class="nav">
-                      <ul>
-                          <li><a href="index.html">About</a></li>
-                          <li><a href="portfolio.html">Portfolio</a></li>
-                          <li><a href="contact.html">Contact</a></li>
-                      </ul>
-                  </nav>
-              </div>
-          </section>
-        </header>
-        <hr>
 
-<!--Main Section -->
-<section id="full2">
-        <div id="aside4">
-              <h1>Portfolio</h1>
-              <hr>
-        <div id="main-container">
-             <div class="work">
-                <img src="assets/images/Placeholder Image 1.jpg" alt="hangman">
-                <h3>Hangman</h3>
-              </div>
-              <P></P>
-              <div class="work">
-                <img src="assets/images/Placeholder Image 2.jpg" alt="RPG Game">
-                <h3>RPG Game</h3>
-              </div>
-              <P></P>
-              <div class="work">
-                <img src="assets/images/Placeholder Image 3.jpg" alt="Trivia Game">
-                <h3>Trivia Game</h3>
-              </div>
-              <div class="work">
-                <img src="assets/images/Placeholder Image 4.jpg" alt="Berkeley Info Widget">
-                <h3>Berkeley Info Widget</h3>
-              </div>
-              <div class="work">
-                <img src="assets/images/Placeholder Image 5.jpg" alt="Rock Paper Scissors">
-                <h3>Rock Paper Scissors</h3>
-              </div>
+<head>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta charset="UTF-8">
+  <title>Bootstrap Portfolio</title>
+  <script src="https://use.fontawesome.com/2214a7171f.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+</head>
+
+<body>
+  <!-- Navagation -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container p-0">
+      <a class="navbar-brand" href="index.html">Stephanie Long</a>
+      <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav"
+        data-toggle="collapse" type="button">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">About
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <!-- navbar-nav -->
+      </div>
+      <!-- collapse -->
+    </div>
+    <!-- container -->
+  </nav>
+  <!-- navbar -->
+  <!-- Body -->
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="card col-lg-8 mt-4">
+        <div class="card-body">
+          <h4 class="card-title">Portfolio</h4>
           <hr>
-        </section>
-    </section>
-        <hr>
-    </body>
-<!-- Footer -->
-      <footer>Copyright ©</footer>
-<!-- Fin -->
-    </html>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 1.jpg" alt="Project 1">
+            <span class="project-title">Hangman</span>
+          </div>
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 2.jpg" alt="Project 2">
+            <span class="project-title">RPG Game</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 3.jpg" alt="Project 3">
+            <span class="project-title">Trivia Game</span>
+          </div>
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 4.jpg" alt="Project 4">
+            <span class="project-title">Rutgers Info Widget</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 5.jpg" alt="Project 5">
+            <span class="project-title">Trivia Game</span>
+          </div>
+          <div class="col-md-6">
+          </div>
+        </div>
+        <div class="row auto-clear">
+
+        </div>
+        <!-- card-body -->
+      </div>
+      <!-- card col-lg-8 -->
+      <div class="col-lg-3 p-0 mt-4">
+        <!-- card height fix -->
+        <div class="card p-0">
+          <div class="card-header">
+            Connect with me
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-4 p-1">
+                <a class="fa-stack fa-2x mx-auto d-block" href="https://github.com/smlong203" target="_blank">
+                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                </a>
+              </div>
+              <div class="col-4 p-1">
+                <a class="fa-stack fa-2x mx-auto d-block" href="https://www.linkedin.com/in/stephanielong203/" target="_blank">
+                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                  <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+                </a>
+              </div>
+              <div class="col-4 p-1">
+                <a class="fa-stack fa-2x mx-auto d-block" href="https://stackexchange.com/users/14010469/stephanie-m-long" target="_blank">
+                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </a>
+              </div>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- card-body -->
+        </div>
+        <!-- card -->
+      </div>
+      <!-- col-lg-3 -->
+    </div>
+    <!-- /row justify-content-between -->
+  </div>
+  <!-- container -->
+  <!-- Footer -->
+  <footer class="footer">
+    <br>
+    <div class="container">
+      <span class="text-muted">&copy;Copyright 2018 Stephanie Long</span>
+    </div>
+  </footer>
+  <br>
+  <!-- Javascript -->
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+  </script>
+</body>
+
+</html>
