--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,9 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <img class="img-thumbnail project" src="assets/images/Placeholder Image 1.jpg" href="https://smlong203.github.io/Psychic-Game/"
-              alt="Project 1">
-            <span class="project-title">Psychic-Game</span>
+            <img class="img-thumbnail project" src="assets/images/Placeholder Image 1.jpg" alt="Project 1">
+            <a href="https://smlong203.github.io/Psychic-Game/">
+              <span class="project-title">Psychic-Game</span>
           </div>
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 2.jpg" alt="Project 2">
