--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,17 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 1.jpg" alt="Project 1">
-            <span class="project-title">Psychic-Game!</span>
+            <span class="project-title">
+              <Psychic-Game!>
+                <a href="https://smlong203.github.io/Psychic-Game/">Psychic Game</a>
+            </span>
           </div>
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 2.jpg" alt="Project 2">
-            <span class="project-title">RPG Game</span>
+            <span class="project-title">
+              <Crytal Game>
+                <a href="https://smlong203.github.io/unit-4-game/">Crystal Game</a>
+            </span>
           </div>
         </div>
         <div class="row">
