--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,8 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 3.jpg" alt="Project 3">
-            <span class="project-title">Trivia Game</span>
+            <Trivia Game>
+              <a href="https://smlong203.github.io/TriviaGame/">Trivia Game</a>
           </div>
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 4.jpg" alt="Project 4">
