--- a/portfolio.html
+++ b/portfolio.html
@@ -74,13 +74,14 @@
           </div>
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 4.jpg" alt="Project 4">
-            <span class="project-title">Rutgers Info Widget</span>
+            <Trivia Game>
+              <a href="https://smlong203.github.io/giftastic/">Giphy Project</a>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 5.jpg" alt="Project 5">
-            <span class="project-title">Trivia Game</span>
+            <span class="project-title">Rutgers Info Widget</span>
           </div>
           <div class="col-md-6">
           </div>
