--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,8 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 5.jpg" alt="Project 5">
-            <span class="project-title">Rutgers Info Widget</span>
+            <Trivia Game>
+              <a href="https://jasonfinney.github.io/apiProject/index.html">Group Project #1</a>
           </div>
           <div class="col-md-6">
           </div>
