updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,9 @@
     <!-- container -->
   </nav>
   <!-- navbar -->
-  <!-- Body -->
+  </div>
+
+  <!-- Portfolio Contents -->
   <div class="container">
     <div class="row justify-content-between">
       <div class="card col-lg-8 mt-4">
@@ -88,64 +90,39 @@
           </div>
         </div>
         <div class="row auto-clear">
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder image 6.jpg" alt="Project 5">
+            <Liri Homework>
+              <a href="https://github.com/smlong203/liri-node-app.git">Liri Homework</a>
+          </div>
+          <div class="col-md-6">
+          </div>
+        </div>
+        <div class="row auto-clear">
+        </div>
+      </div>
+      <div class="row auto-clear">
+      </div>
+    </div>
 
-        </div>
-        <!-- card-body -->
+
+    <!-- Footer -->
+    <footer class="footer">
+      <br>
+      <div class="container">
+        <span class="text-muted">&copy;Copyright 2018 Stephanie Long</span>
       </div>
-      <!-- card col-lg-8 -->
-      <div class="col-lg-3 p-0 mt-4">
-        <!-- card height fix -->
-        <div class="card p-0">
-          <div class="card-header">
-            Connect with me
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-4 p-1">
-                <a class="fa-stack fa-2x mx-auto d-block" href="https://github.com/smlong203" target="_blank">
-                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </a>
-              </div>
-              <div class="col-4 p-1">
-                <a class="fa-stack fa-2x mx-auto d-block" href="https://www.linkedin.com/in/stephanielong203/" target="_blank">
-                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
-                  <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
-                </a>
-              </div>
-              <div class="col-4 p-1">
-                <a class="fa-stack fa-2x mx-auto d-block" href="https://stackexchange.com/users/14010469/stephanie-m-long" target="_blank">
-                  <i class="fa fa-square fa-stack-2x btn-outline-dark"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </a>
-              </div>
-            </div>
-            <!-- /row -->
-          </div>
-          <!-- card-body -->
-        </div>
-        <!-- card -->
-      </div>
-      <!-- col-lg-3 -->
-    </div>
-    <!-- /row justify-content-between -->
-  </div>
-  <!-- container -->
-  <!-- Footer -->
-  <footer class="footer">
+    </footer>
     <br>
-    <div class="container">
-      <span class="text-muted">&copy;Copyright 2018 Stephanie Long</span>
-    </div>
-  </footer>
-  <br>
-  <!-- Javascript -->
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
-  </script>
+    <!-- Javascript -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+    </script>
 </body>
 
 </html>
