--- a/portfolio.html
+++ b/portfolio.html
@@ -83,21 +83,57 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-thumbnail project" src="assets/images/Placeholder Image 5.jpg" alt="Project 5">
-            <Trivia Game>
-              <a href="https://jasonfinney.github.io/apiProject/index.html">Group Project #1</a>
+            <span class="project-title">
+              <Group Project #1>
+                <a href="https://jasonfinney.github.io/apiProject/index.html">Group Project #1</a>
+            </span>
           </div>
           <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/Placeholder image 6.jpg" alt="Liri">
+            <span class="project-title">
+              <Liri>
+                <a href="https://github.com/smlong203/liri-node-app.git">Liri</a>
+            </span>
           </div>
-        </div>
-        <div class="row auto-clear">
         </div>
         <div class="row">
           <div class="col-md-6">
-            <img class="img-thumbnail project" src="assets/images/Placeholder image 6.jpg" alt="Project 5">
-            <Liri Homework>
-              <a href="https://github.com/smlong203/liri-node-app.git">Liri Homework</a>
+            <img class="img-thumbnail project" src="assets/images/rainbows.jpg" alt="Bamazon">
+            <Bamazon>
+              <a href="https://github.com/smlong203/nodejs">Bamazon</a>
           </div>
           <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <Placeholder>
+              <a href="">Placeholder</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <span class="project-title">
+              <Placeholder>
+                <a href="">Placeholder</a>
+            </span>
+          </div>
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <span class="Placeholder">
+              <Placeholder>
+                <a href="">Placeholder</a>
+            </span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <Placeholder>
+              <a href="">Placeholder</a>
+          </div>
+          <div class="col-md-6">
+            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <Placeholder>
+              <a href="">Placeholder</a>
           </div>
         </div>
         <div class="row auto-clear">
