--- a/portfolio.html
+++ b/portfolio.html
@@ -103,9 +103,9 @@
               <a href="https://github.com/smlong203/nodejs">Bamazon</a>
           </div>
           <div class="col-md-6">
-            <img class="img-thumbnail project" src="assets/images/placeholder.png" alt="Placeholder">
+            <img class="img-thumbnail project" src="assets/images/burger.jpg" alt="Eat-Da-Burger">
             <Placeholder>
-              <a href="">Placeholder</a>
+              <a href="https://fast-atoll-99208.herokuapp.com/">Eat-Da-Burger App</a>
           </div>
         </div>
         <div class="row">
