--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
               <a href="https://github.com/smlong203/nodejs">Bamazon</a>
           </div>
           <div class="col-md-6">
-            <img class="img-thumbnail project" src="assets/images/burger.jpg" alt="Eat-Da-Burger">
+            <img class="img-thumbnail project" src="assets/images/Burger.jpg" alt="Eat-Da-Burger">
             <Placeholder>
               <a href="https://fast-atoll-99208.herokuapp.com/">Eat-Da-Burger App</a>
           </div>
